corrected the comments